@@ -54,10 +54,10 @@ application/ogg
 
 application/pdf
 	_description=PDF document
-	default_action_type=application
-	short_list_component_iids_for_novice_user_level=OAFIID:gpdf_component:892f2727-e2ec-423c-91ad-6f7b75fec6c8
-	short_list_component_iids_for_intermediate_user_level=OAFIID:gpdf_component:892f2727-e2ec-423c-91ad-6f7b75fec6c8
-	short_list_component_iids_for_advanced_user_level=OAFIID:gpdf_component:892f2727-e2ec-423c-91ad-6f7b75fec6c8
+	default_action_type=component
+	short_list_component_iids_for_novice_user_level=OAFIID:GNOME_PDF_Control
+	short_list_component_iids_for_intermediate_user_level=OAFIID:GNOME_PDF_Control
+	short_list_component_iids_for_advanced_user_level=OAFIID:GNOME_PDF_Control
 	short_list_application_ids_for_novice_user_level=acroread,gpdf,xpdf,ggv,gv
 	short_list_application_ids_for_intermediate_user_level=acroread,gpdf,xpdf,ggv,gv
 	short_list_application_ids_for_advanced_user_level=acroread,gpdf,xpdf,ggv,gv
